<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:baselineAligned="false"
    android:weightSum="1"
    android:clickable="true"
    android:id="@+id/loginLinerLayout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_marginTop="5dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:id="@+id/gridData">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtLogin"
            android:id="@+id/textLogin"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:layout_row="0" />

        <EditText
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:id="@+id/editLogin"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtPass"
            android:id="@+id/textPassword"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:layout_row="1" />

        <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_margin="5dp" />
    </GridLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressLoging"
        android:layout_gravity="center_horizontal"
        android:indeterminateDrawable="@drawable/loader_progress"
        android:indeterminate="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageAvatarka"
            android:src="@drawable/ic_error"
            android:layout_margin="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewLogin"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewMessages"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewFavorits"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewSubcribe"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp" />


        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRazlogin"
        android:id="@+id/btnRazlLogin"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Логи:"
        android:id="@+id/txtLogi"
        android:layout_margin="5dp" />
</LinearLayout>