<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <ScrollView
            android:id="@+id/myview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/drawer_bag2">

            <GridLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:onClick="openAll"
                android:id="@+id/btnNew">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_text_news"
                    android:id="@+id/textNovinki"
                    android:textColor="@color/orange_dark"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_all"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/drawer_bag2"
                    android:background="@color/orange_dark"
                    android:gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp" />


            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_margin="2dp">

                <me.develfox.anidub.WrappedGridView
                    android:id="@+id/gridNew"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:horizontalSpacing="4dip"
                    android:numColumns="4"
                    android:verticalSpacing="4dip"
                    android:padding="3dip"
                    android:stretchMode="columnWidth"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <GridLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:onClick="openAll"
                android:id="@+id/btnTopTV">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_text_tv"
                    android:id="@+id/textTopTV"
                    android:textColor="@color/orange_dark"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_all"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/drawer_bag2"
                    android:background="@color/orange_dark"
                    android:gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp" />


            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_margin="2dp">

                <GridView
                    android:id="@+id/gridTopTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:horizontalSpacing="4dip"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="4dip"
                    android:padding="3dip" />
            </LinearLayout>

            <GridLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:onClick="openAll"
                android:id="@+id/btnTopOngoing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_text_ongoing"
                    android:id="@+id/textTopOngoing"
                    android:textColor="@color/orange_dark"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_all"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/drawer_bag2"
                    android:background="@color/orange_dark"
                    android:gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp" />


            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_margin="2dp">

                <GridView
                    android:id="@+id/gridTopOngoing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:horizontalSpacing="4dip"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="4dip"
                    android:padding="3dip" />
            </LinearLayout>

            <GridLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:onClick="openAll"
                android:id="@+id/btnTopFilm">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_text_films"
                    android:id="@+id/textTopFilm"
                    android:textColor="@color/orange_dark"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_all"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/drawer_bag2"
                    android:background="@color/orange_dark"
                    android:gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp"
                    android:autoText="false" />


            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_margin="2dp">

                <GridView
                    android:id="@+id/gridFilms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:horizontalSpacing="4dip"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="4dip"
                    android:padding="3dip" />
            </LinearLayout>

            <GridLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:onClick="openAll"
                android:id="@+id/btnTopOva">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_text_Ova"
                    android:id="@+id/textTopOva"
                    android:textColor="@color/orange_dark"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_all"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/drawer_bag2"
                    android:background="@color/orange_dark"
                    android:gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp"
                    android:autoText="false" />
            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_margin="2dp">

                <GridView
                    android:id="@+id/gridOva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:horizontalSpacing="4dip"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="4dip"
                    android:padding="3dip" />
            </LinearLayout>

            <GridLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:onClick="openAll"
                android:id="@+id/btnTopDorams">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_text_dorams"
                    android:id="@+id/textTopDorams"
                    android:textColor="@color/orange_dark"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text_all"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/drawer_bag2"
                    android:background="@color/orange_dark"
                    android:gravity="center"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp" />


            </GridLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:layout_margin="2dp">

                <GridView
                    android:id="@+id/gridDorams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:horizontalSpacing="4dip"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="4dip"
                    android:padding="3dip" />
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->

    <!-- <fragment android:id="@+id/navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:name="me.develfox.anidub.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" /> -->
     <ListView
         android:id="@+id/navigation_drawer"
         android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:name="me.develfox.anidub.NavigationDrawerFragment"
         android:dividerHeight="0dp"
         android:background="@color/drawer_bag2"/>
      <!--   android:listSelector="@drawable/list_selector"  -->

 </android.support.v4.widget.DrawerLayout>
